--- a/arch/arm/configs/4033_defconfig
+++ b/arch/arm/configs/4033_defconfig
@@ -1524,7 +1524,8 @@ CONFIG_MTK_AUXADC=y
 CONFIG_MTK_MMC=y
 CONFIG_MTK_EMMC_SUPPORT=y
 # CONFIG_MTK_EMMC_CACHE is not set
-# CONFIG_MTK_EMMC_SUPPORT_OTP is not set
+CONFIG_MTK_EMMC_SUPPORT_OTP=y
+CONFIG_MTK_MODEM_OTP_SUPPORT=y
 # CONFIG_MTK_SDIOAUTOK_SUPPORT is not set
 # CONFIG_SDIOAUTOK_SUPPORT is not set
 # CONFIG_PWR_LOSS_MTK_TEST is not set
