--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ script:
   - export KBUILD_BUILD_USER="root"
   - export KBUILD_BUILD_HOST="Manish4586"
   - mkdir out
-  - make O=out pop_c3_defconfig
-  - make O=out -j2
-  - make ARCH=arm -j16 clean mrproper
+  - make pop_c3_defconfig O=out/
+  - make -j4 O=out/
+  - make ARCH=arm -j4 clean mrproper
 
 after_success:
   - curl --upload-file out/arch/arm/boot/zImage https://transfer.sh/pop_c3_kernel
